# HyeniMC

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  AUTH_PROTOCOL.md  AUTO_UPDATE_INSTALL.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  LICENSE.md  LICENSE_EN.md  PHASE1_PHASE2_COMPLETE.md  PHASE5_OVERVIEW.md  PHASE5_THEME_DESIGN.md  PROGRESS.md  README.md  README_EN.md  RELEASE_SYSTEM.md  TESTING.md  THEME_SYSTEM.md  WORKER_MODS_IMPLEMENTATION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  test-auth.html  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: release-launcher.yml
apps/launcher/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: account.rs  commands.rs  crash.rs  crash_analyzer.rs  game.rs  hyeni.rs  launcher.rs  main.rs  mods.rs  pack.rs  resources.rs  util.rs
backend/: go.mod  go.sum
cloudflare-worker/: .gitignore  CROSS_PLATFORM_SCRIPTS.md  DEPLOYMENT.md  ENV_SETUP.md  MIGRATION-GUIDE.md  MIGRATION.md  README-DEPLOYMENT.md  README-V2-MIGRATION.md  README.md  SECURITY.md  deploy-config.example.json  deploy-hyenipack.ps1  deploy-hyenipack.sh  deploy-mod-v2.ps1  deploy-mod-v2.sh  deploy-mod.ps1  deploy-mod.sh  list-versions.ps1  list-versions.sh  package.json  releases-api.js  rollback-mod.ps1  rollback-mod.sh  update-registry-v2.ps1  update-registry-v2.sh  update-registry.ps1  update-registry.sh  vitest.config.js  wrangler.toml  wrangler.toml.example
cloudflare-worker/admin/: index.html  package.json  postcss.config.js  tsconfig.json  vite.config.ts
cloudflare-worker/releases/: hyeniadditionalfunctions-deploy-config_1.0-SNAPSHOT.json  hyeniadditionalfunctions-deploy-config_1.0.1.json  hyeniadditionalfunctions-deploy-config_1.0.2.json  hyeniadditionalfunctions-deploy-config_1.0.3.json  hyeniadditionalfunctions-deploy-config_1.0.4.json  hyeniadditionalfunctions-deploy-config_1.0.5.json  hyenihelper-deploy-config_1.0.1.json  hyenihelper-deploy-config_1.0.2.json  hyenihelper-deploy-config_1.0.3.json  hyenihelper-deploy-config_1.0.4.json  hyenihelper-deploy-config_1.0.5.json
cloudflare-worker/scripts/: Get-WorkerUrl.ps1  get-worker-url.sh
cloudflare-worker/src/: index.js
cloudflare-worker/test/: access.test.js  mod-index.test.js  modpacks-public.test.js  mods-format.test.js  mods-index-routes.test.js  mods-manage.test.js  mods-publish.test.js  mods-read.test.js  packs.test.js  prerelease.test.js  r2.test.js  registry.test.js  router-integration.test.js  routing.test.js  worker-latest-resolve.test.js
crates/hyenimc-core/: Cargo.toml
crates/hyenimc-core/examples/: read_mod_cache.rs  read_real_db.rs
crates/hyenimc-core/src/: account.rs  crypto.rs  db.rs  hyeni_tokens.rs  lib.rs  mod_cache.rs  paths.rs  profile.rs  settings.rs  stats.rs
crates/hyenimc-launcher/: Cargo.toml
crates/hyenimc-launcher/examples/: detect_java.rs  dump_args.rs  list_mods.rs  loader_versions.rs
crates/hyenimc-launcher/src/: auth.rs  download.rs  hyeni.rs  hyenipack.rs  install.rs  instmeta.rs  java.rs  launch.rs  lib.rs  loader.rs  manifest.rs  modmeta.rs  natives.rs  rules.rs  workermods.rs
docs/: CURSEFORGE_PROXY_DEPLOYMENT.md  ENVIRONMENT_SETUP.md  HYENIPACK.md  HYENIPACK_V2_AUTO_UPDATE.md  HYENIPACK_V2_DISCUSSION_SESSION.md  LOGGING.md  MODPACK_DYNAMIC_UPDATE_DISCUSSION.md  PROJECT_STRUCTURE.md  README.md  TOKEN_BASED_MODPACK_SYSTEM.md
docs/architecture/: ARCHITECTURE.md  AUTH_PROTOCOL.md  DESIGN.md  HYENIPACK_SPEC.md  QA_AND_RELEASE.md  SERVER_DETECTION_OPTIONS.md  TAURI_MIGRATION_PHASE1.md
docs/deployment/: DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SECRETS.md  GITHUB_ACTIONS_SETUP.md  LAUNCHER_UPDATE_SUMMARY.md  MACOS_AUTO_UPDATE_SUMMARY.md  MACOS_CODE_SIGNING.md  RELEASE_SYSTEM.md  VERSION_MANAGEMENT.md
docs/development/: CRITICAL_FAILURE_SCENARIOS.md  DEVELOPMENT.md  DOWNLOAD_ERROR_PLAN.md  ERROR_RECOVERY_PLAN.md  ERROR_RECOVERY_STATUS.md  IMPLEMENTATION_GUIDE.md  MEMORY_DETECTION_FIX.md  MODPACK_IMPLEMENTATION_PLAN.md  MOD_AUTO_UPDATE_CHANGELOG.md  MOD_AUTO_UPDATE_INDEX.md  MOD_AUTO_UPDATE_PLAN.md  MOD_AUTO_UPDATE_SUMMARY.md  MOD_AUTO_UPDATE_V2_COMPLETE_GUIDE.md  P0_IMPLEMENTATION_COMPLETE.md  P0_IMPLEMENTATION_PLAN.md  PHASE1_PHASE2_COMPLETE.md  STABILITY_IMPROVEMENTS.md  SYSTEM_STABILITY_INDEX.md  TESTING.md  WORKER_MODS_MULTI_UPDATE.md  WORKER_MOD_API_IMPLEMENTATION.md
docs/guides/: CHECK_REGISTRY.md  MICROSOFT_AUTH_SETUP.md  QUICKSTART.md  SETUP_GUIDE.md  USER_AUTH_GUIDE.md  USER_GUIDE_FOR_HYENIDAY.md  WORKER_MODS_USER_GUIDE.md
docs/performance/: DOWNLOAD_OPTIMIZATION.md
proto/: buf.gen.yaml
proto/launcher/: account.proto  asset.proto  cache.proto  download.proto  health.proto  (+6 more)
scripts/: README.md  generate-config.js  release.ps1  release.sh  setup-auth.sh  sync-version.mjs
(+248 files in other folders)
