[workspace]
resolver = "2"
members = [
    "crates/hyenimc-core",
    "crates/hyenimc-launcher",
    "apps/launcher/src-tauri",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE.md"
authors = ["deVbug"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
