[package]
name = "hyenimc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
rand.workspace = true
hex.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
