[package]
name = "hyenimc-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.33"
hyenimc-core = { path = "../../../crates/hyenimc-core" }
